# sunshine

./: .gitignore  CMakeLists.txt  LICENSE  config.h.in  main.cpp
assembler/: CMakeLists.txt  assembler.cpp  assembler.h
file_collector/: CMakeLists.txt  file_collector.cpp  file_collector.h  subtitle_file_collector.cpp  subtitle_file_collector.h  video_file_collector.cpp  video_file_collector.h
parser/: CMakeLists.txt  parser.cpp  parser.h
test/: CMakeLists.txt  test_assembler.cpp  test_file_collector.cpp  test_parser.cpp
